# tdd

./: README.md
libs/GTEST/lib/: gmock.lib  gtest.lib  gtest_main.lib
libs/GTEST/lib/pkgconfig/: gmock.pc  gmock_main.pc  gtest.pc  gtest_main.pc
src/: CMakeLists.txt
src/src/: CMakeLists.txt
src/src/inc/: dollar.hpp
src/src/src/: dollar.cpp
src/ut/: CMakeLists.txt  chapter1_test.cpp  main.cpp
